test/corpus/definitions.txt
===
header line
===
ScriptName Example

---

(source_file
  (header_line
    (identifier)
    (eol)))

===
header line with extends
===
ScriptName Example Extends Form
---

(source_file
  (header_line
    (identifier)
    (identifier)
    (eol)))

===
header line with flag
===
ScriptName Example Hidden
---

(source_file
  (header_line
    (identifier)
    (eol)))

===
import
===
ScriptName Example
Import Game
Import Debug
---

(source_file
  (header_line
    (identifier)
    (eol))
  (import
    (identifier)
    (eol))
  (import
    (identifier)
    (eol)))

===
variable definition
===
ScriptName Example
Int Variable1
Actor ActorRef
Float[] FloatArray
Bool Condition
---

(source_file
  (header_line
    (identifier)
    (eol))
  (variable_definition
    (type
      (identifier))
    (identifier)
    (eol))
  (variable_definition
    (type
      (identifier))
    (identifier)
    (eol))
  (variable_definition
    (type
      (identifier))
    (identifier)
    (eol))
  (variable_definition
    (type
      (identifier))
    (identifier)
    (eol)))

===
namespaced extends
===
ScriptName Example Extends MyMod:Base
---

(source_file
  (header_line
    (identifier)
    (namespaces
      (identifier))
    (identifier)
    (eol)))

===
namespaced import
===
ScriptName Example
Import MyMod:Utility
Import MyMod:Sub:Util
---

(source_file
  (header_line
    (identifier)
    (eol))
  (import
    (namespaces
      (identifier))
    (identifier)
    (eol))
  (import
    (namespaces
      (identifier)
      (identifier))
    (identifier)
    (eol)))
