test/corpus/expressions.txt
===
binary operator with array expression
===

ScriptName Example

Bool Function IsTrue()
	Int[] x = New Int[10]
	x[0] = 1
	If x[0] || x[1]
		Return True
	EndIf
	Return False
EndFunction

---

(source_file
  (header_line
    (identifier)
    (eol))
  (function_definition
    (type
      (identifier))
    (identifier)
    (parameters)
    (eol)
    (block
      (define_statement
        (type
          (identifier))
        (identifier)
        (new_expression
          (type
            (identifier))
          (literal
            (integer)))
        (eol))
      (assign_statement
        (array_expression
          (identifier)
          (literal
            (integer)))
        (literal
          (integer))
        (eol))
      (if_statement
        (binary_operator
          (array_expression
            (identifier)
            (literal
              (integer)))
          (array_expression
            (identifier)
            (literal
              (integer))))
        (eol)
        (block
          (return_statement
            (literal
              (true))
            (eol)))
        (eol))
      (return_statement
        (literal
          (false))
        (eol)))
    (eol)))

===
namespaced call
===
ScriptName Example
Function Foo(MyMod:Shapes:Point pt)
  MyMod:Utility.MyGlobal()
  MyMod:Sub:Util.RootCall()
EndFunction
---

(source_file
  (header_line
    (identifier)
    (eol))
  (function_definition
    (identifier)
    (parameters
      (parameter
        (type
          (namespaces
            (identifier)
            (identifier))
          (identifier))
        (identifier)))
    (eol)
    (block
      (expression_statement
        (call_expression
          (dot_operator
            (namespaced_identifier
              (namespaces
                (identifier))
              (identifier))
            (identifier))
          (arguments))
        (eol))
      (expression_statement
        (call_expression
          (dot_operator
            (namespaced_identifier
              (namespaces
                (identifier)
                (identifier))
              (identifier))
            (identifier))
          (arguments))
        (eol)))
    (eol)))

===
if else statement
===
ScriptName Example
Function Foo()
  Bool a = True
  If a
    Debug.Trace("a")
  Else
    Debug.Trace("b")
  EndIf
EndFunction
---

(source_file
  (header_line
    (identifier)
    (eol))
  (function_definition
    (identifier)
    (parameters)
    (eol)
    (block
      (define_statement
        (type
          (identifier))
        (identifier)
        (literal
          (true))
        (eol))
      (if_statement
        (identifier)
        (eol)
        (block
          (expression_statement
            (call_expression
              (dot_operator
                (identifier)
                (identifier))
              (arguments
                (literal
                  (string))))
            (eol)))
        (else_clause
          (eol)
          (block
            (expression_statement
              (call_expression
                (dot_operator
                  (identifier)
                  (identifier))
                (arguments
                  (literal
                    (string))))
              (eol))))
        (eol)))
    (eol)))
